--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,11 +34,14 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.flutter_oauth2"
-        minSdkVersion 16
-        targetSdkVersion 30
+        applicationId "com.auth0.flutterdemo"
+        minSdkVersion 18
+        targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        manifestPlaceholders = [
+                'appAuthRedirectScheme': 'com.auth0.flutterdemo'
+        ]
     }
 
     buildTypes {
