--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_appauth: ^0.9.1
   flutter_secure_storage: ^3.3.3
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
@@ -34,6 +35,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_driver:    # new
+    sdk: flutter     # new
+  test: ^1.14.4      # new
   integration_test:
     sdk: flutter
 
